Completado el CRUD de weather con validación y test
